<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_register_background">

    <Button
        android:id="@+id/btn_user_check_register"
        android:layout_width="@dimen/user_btn_width"
        android:layout_height="@dimen/user_btn_height"
        android:layout_marginTop="@dimen/user_data_margin_top"
        android:background="@drawable/selector_btn_user"
        android:text="@string/userRegister"
        android:textColor="@color/userDataColor"
        android:textSize="@dimen/user_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_user_register" />

    <Button
        android:id="@+id/btn_user_register_back"
        android:layout_width="@dimen/user_btn_width"
        android:layout_height="@dimen/user_btn_height"
        android:layout_marginTop="@dimen/user_data_margin_top"
        android:background="@drawable/selector_btn_user"
        android:text="@string/userBack"
        android:textColor="@color/userDataColor"
        android:textSize="@dimen/user_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_user_check_register" />

    <ImageView
        android:id="@+id/btn_user_register_plane"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_user_register_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_word_margin_start"
        android:layout_marginTop="@dimen/user_word_margin_top"
        android:text="@string/registerWord"
        android:textColor="@color/userDataColor"
        android:textSize="@dimen/user_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/shape_login_register_et_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/btn_user_register_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/userNameHint"
            android:maxLines="1"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_user_new_password"
            android:layout_width="@dimen/user_et_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/user_et_pwd_other_margin"
            android:layout_marginLeft="@dimen/user_et_pwd_other_margin"
            android:layout_marginTop="@dimen/user_et_pwd_margin_top"
            android:layout_marginEnd="@dimen/user_et_pwd_other_margin"
            android:layout_marginRight="@dimen/user_et_pwd_other_margin"
            android:ems="10"
            android:hint="@string/userPasswordHint"
            android:inputType="textPassword"
            android:textColor="@color/userDataColor"
            android:textColorHint="@color/userDataColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_user_register_name" />

        <EditText
            android:id="@+id/et_user_repeated_password"
            android:layout_width="@dimen/user_et_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/user_et_pwd_other_margin"
            android:layout_marginLeft="@dimen/user_et_pwd_other_margin"
            android:layout_marginTop="@dimen/user_et_pwd_margin_top"
            android:layout_marginEnd="@dimen/user_et_pwd_other_margin"
            android:layout_marginRight="@dimen/user_et_pwd_other_margin"
            android:ems="10"
            android:hint="@string/userCheckPasswordHint"
            android:inputType="textPassword"
            android:textColor="@color/userDataColor"
            android:textColorHint="@color/userDataColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_user_new_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>